--- a/index.html
+++ b/index.html
@@ -7,7 +7,28 @@
     <link rel="stylesheet" href="./src/styles/style.css" />
   </head>
   <body>
-    
+    <header class="header">
+      <div class="container">
+        <nav class="menu">
+          <img
+            src="./assets/images/netflix-logo.png"
+            alt="NetFlix logo"
+            class="header-logo"
+          />
+          <ul class="menu-items">
+            <li class="menu-item"><a href="#">Home</a></li>
+            <li class="menu-item"><a href="#">Trailer</a></li>
+            <li class="menu-item"><a href="#">Synopsis</a></li>
+            <li class="menu-item"><a href="#">Scene</a></li>
+            <li class="menu-item"><a href="#">Info</a></li>
+          </ul>
+          <div class="menu-btns">
+            <a href="#" class="menu-btn1">Login</a>
+            <a href="#" class="menu-btn2">Log Out</a>
+          </div>
+        </nav>
+      </div>
+    </header>
     <script src="./src/scripts/script.js"></script>
   </body>
 </html>
