end header codding

--- a/index.html
+++ b/index.html
@@ -27,6 +27,32 @@
             <a href="#" class="menu-btn2">Log Out</a>
           </div>
         </nav>
+        <section class="header-main">
+          <div class="header-main-left">
+            <div class="info-boxes">
+              <span class="info-box info-box1">Action</span>
+              <span class="info-box info-box2">2017</span>
+              <span class="info-box info-box3">Spain</span>
+            </div>
+            <h1 class="site-title">MONEY HEIST</h1>
+            <p class="header-main-description">
+              To carry out the biggest heist in history, a mysterious man called
+              The Professor recruits a band of eight robbers who have a single
+              characteristic: none of them has anything to lose.
+            </p>
+            <div class="header-main-links">
+              <a href="#" class="header-main-link1"> &#9998; More Synopsis</a>
+              <a href="#" class="header-main-link2">&#9737; Trailer</a>
+            </div>
+          </div>
+          <div class="header-main-right">
+            <img
+              src="./assets/images/poster.jpg"
+              alt="poster"
+              class="header-poster"
+            />
+          </div>
+        </section>
       </div>
     </header>
     <script src="./src/scripts/script.js"></script>
