--- a/index.html
+++ b/index.html
@@ -1,118 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Money Heist</title>
+    <!-- glide.js library css -->
+    <link rel="stylesheet" href="./src/slider/css/glide.core.min.css" />
+    <link rel="stylesheet" href="./src/slider/css/glide.theme.min.css" />
+    <!-- custom css -->
+    <link rel="stylesheet" href="./src/styles/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Money Heist</title>
-  <!-- glide.js library css -->
-  <link rel="stylesheet" href="./src/slider/css/glide.core.min.css">
-  <link rel="stylesheet" href="./src/slider/css/glide.theme.min.css">
-  <!-- custom css -->
-  <link rel="stylesheet" href="./src/styles/style.css" />
-</head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <nav class="menu">
+          <img
+            src="./assets/images/netflix-logo.png"
+            alt="NetFlix logo"
+            class="header-logo"
+          />
+          <ul class="menu-items">
+            <li class="menu-item"><a href="#">Home</a></li>
+            <li class="menu-item"><a href="#">Trailer</a></li>
+            <li class="menu-item"><a href="#">Synopsis</a></li>
+            <li class="menu-item"><a href="#">Scene</a></li>
+            <li class="menu-item"><a href="#">Info</a></li>
+          </ul>
+          <div class="menu-btns">
+            <a href="#" class="menu-btn1">Login</a>
+            <a href="#" class="menu-btn2">Log Out</a>
+          </div>
+        </nav>
+        <section class="header-main">
+          <div class="header-main-left">
+            <div class="info-boxes">
+              <span class="info-box info-box1">Action</span>
+              <span class="info-box info-box2">2017</span>
+              <span class="info-box info-box3">Spain</span>
+            </div>
+            <h1 class="site-title">MONEY HEIST</h1>
+            <p class="header-main-description">
+              To carry out the biggest heist in history, a mysterious man called
+              The Professor recruits a band of eight robbers who have a single
+              characteristic: none of them has anything to lose.
+            </p>
+            <div class="header-main-links">
+              <a href="#" class="header-main-link1"> &#9998; More Synopsis</a>
+              <a href="#" class="header-main-link2">&#9737; Trailer</a>
+            </div>
+          </div>
+          <div class="header-main-right">
+            <img
+              src="./assets/images/poster.jpg"
+              alt="poster"
+              class="header-poster"
+            />
+          </div>
+        </section>
+        <!-- section slider -->
+        <section class="slider-section">
+          <div class="glide">
+            <div class="glide__track" data-glide-el="track">
+              <ul class="glide__slides">
+                <li class="glide__slide">
+                  <img
+                    src="./assets/images/slider-images/slider-img1.jpg"
+                    alt=""
+                  />
+                </li>
+                <li class="glide__slide">
+                  <img
+                    src="./assets/images/slider-images/slider-img2.jpg"
+                    alt=""
+                  />
+                </li>
+                <li class="glide__slide">
+                  <img
+                    src="./assets/images/slider-images/slider-img3.jpg"
+                    alt=""
+                  />
+                </li>
+                <li class="glide__slide">
+                  <img
+                    src="./assets/images/slider-images/slider-img4.jpg"
+                    alt=""
+                  />
+                </li>
+                <li class="glide__slide">
+                  <img
+                    src="./assets/images/slider-images/slider-img8.jpg"
+                    alt=""
+                  />
+                </li>
+              </ul>
+            </div>
+            <div class="glide__arrows" data-glide-el="controls">
+              <button
+                class="glide__arrow glide__arrow--left"
+                data-glide-dir="<"
+              >
+                prev
+              </button>
+              <button
+                class="glide__arrow glide__arrow--right"
+                data-glide-dir=">"
+              >
+                next
+              </button>
+            </div>
+          </div>
+        </section>
+      </div>
+    </header>
 
-<body>
-  <header class="header">
-    <div class="container">
-      <nav class="menu">
-        <img src="./assets/images/netflix-logo.png" alt="NetFlix logo" class="header-logo" />
-        <ul class="menu-items">
-          <li class="menu-item"><a href="#">Home</a></li>
-          <li class="menu-item"><a href="#">Trailer</a></li>
-          <li class="menu-item"><a href="#">Synopsis</a></li>
-          <li class="menu-item"><a href="#">Scene</a></li>
-          <li class="menu-item"><a href="#">Info</a></li>
-        </ul>
-        <div class="menu-btns">
-          <a href="#" class="menu-btn1">Login</a>
-          <a href="#" class="menu-btn2">Log Out</a>
-        </div>
-      </nav>
-      <section class="header-main">
-        <div class="header-main-left">
-          <div class="info-boxes">
-            <span class="info-box info-box1">Action</span>
-            <span class="info-box info-box2">2017</span>
-            <span class="info-box info-box3">Spain</span>
+    <!-- shayan section -->
+    <section class="section-6">
+      <div class="sec6-container">
+        <div class="sec6-box">
+          <div class="video-box">
+            <video src="assets/videos/Trailer.mp4" controls></video>
           </div>
-          <h1 class="site-title">MONEY HEIST</h1>
-          <p class="header-main-description">
-            To carry out the biggest heist in history, a mysterious man called
-            The Professor recruits a band of eight robbers who have a single
-            characteristic: none of them has anything to lose.
-          </p>
-          <div class="header-main-links">
-            <a href="#" class="header-main-link1"> &#9998; More Synopsis</a>
-            <a href="#" class="header-main-link2">&#9737; Trailer</a>
+          <div class="sec6-content-box">
+            <div class="sec6-label-box">
+              <span class="sec6-label-1">content</span>
+              <span class="sec6-label-2">content</span>
+              <span class="sec6-label-3">content</span>
+            </div>
+            <h1>Lorem ipsum</h1>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit,
+              optio? Enim laudantium vitae excepturi laboriosam error ducimus id
+              deleniti, quaerat necessitatibus soluta possimus. Molestiae vero
+              iste consequatur? Distinctio, tempore voluptatem.
+            </p>
+            <div class="sec6-button-box">
+              <a class="sec6-button-1" href="#">content</a>
+              <a class="sec6-button-2" href="#">content</a>
+            </div>
           </div>
         </div>
-        <div class="header-main-right">
-          <img src="./assets/images/poster.jpg" alt="poster" class="header-poster" />
-        </div>
-      </section>
-      <!-- section slider -->
-      <section class="slider-section">
-        <div class="glide">
-          <div class="glide__track" data-glide-el="track">
-            <ul class="glide__slides">
-              <li class="glide__slide">
-                <img src="./assets/images/slider-images/slider-img1.jpg" alt="">
-              </li>
-              <li class="glide__slide">
-                <img src="./assets/images/slider-images/slider-img2.jpg" alt="">
-              </li>
-              <li class="glide__slide">
-                <img src="./assets/images/slider-images/slider-img3.jpg" alt="">
-              </li>
-              <li class="glide__slide">
-                <img src="./assets/images/slider-images/slider-img4.jpg" alt="">
-              </li>
-              <li class="glide__slide">
-                <img src="./assets/images/slider-images/slider-img8.jpg" alt="">
-              </li>
-            </ul>
-          </div>
-          <div class="glide__arrows" data-glide-el="controls">
-            <button class="glide__arrow glide__arrow--left" data-glide-dir="<">prev</button>
-            <button class="glide__arrow glide__arrow--right" data-glide-dir=">">next</button>
-          </div>
-        </div>
-      </section>
-    </div>
-  </header>
+      </div>
+    </section>
+    <!-- shayan section -->
 
-  <!-- glide.js library js -->
-  <script src="./src/slider/js/glide.min.js"></script>
-  <!-- glide.js config -->
-  <script>
-    new Glide('.glide', {
-      animationDuration: 1000,
-      hoverpause: true,
-      autoplay: 3000,
-      type: 'carousel',
-      focusAt: 'center',
-      startAt: 1,
-      perView: 5,
-      peek: {
-        before: 60,
-        after: 60,
-      },
-      breakpoints: {
-        1280: {
-          perView: 4
+    <!-- glide.js library js -->
+    <script src="./src/slider/js/glide.min.js"></script>
+    <!-- glide.js config -->
+    <script>
+      new Glide(".glide", {
+        animationDuration: 1000,
+        hoverpause: true,
+        autoplay: 3000,
+        type: "carousel",
+        focusAt: "center",
+        startAt: 1,
+        perView: 5,
+        peek: {
+          before: 60,
+          after: 60,
         },
-        1080: {
-          perView: 3
+        breakpoints: {
+          1280: {
+            perView: 4,
+          },
+          1080: {
+            perView: 3,
+          },
+          640: {
+            perView: 2,
+          },
         },
-        640: {
-          perView: 2
-        }
-      }
-    }).mount()
-  </script>
-  <!-- custom script -->
-  <script src="./src/scripts/script.js"></script>
-</body>
-
+      }).mount();
+    </script>
+    <!-- custom script -->
+    <script src="./src/scripts/script.js"></script>
+  </body>
 </html>
