--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
     <!-- shayan section -->
     <section class="section-6">
-      <div class="sec6-container">
+      <div class="sec6-container container">
         <div class="sec6-box">
           <div class="video-box">
             <video src="assets/videos/Trailer.mp4" controls></video>
