--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit,
               optio? Enim laudantium vitae excepturi laboriosam error ducimus id
               deleniti, quaerat necessitatibus soluta possimus. Molestiae vero
-              iste consequatur? Distinctio, tempore voluptatem.
+              iste consequatur? Distinctio, tempore.
             </p>
             <div class="sec6-button-box">
               <a class="sec6-button-1" href="#">content</a>
