--- a/index.html
+++ b/index.html
@@ -81,7 +81,86 @@
       </section>
     </div>
   </header>
+  <!-- about actor => cena -->
+  <section class="section-actors">
+    <div class="section-actors-container">
+      <div class="about-actors">
+        <div class="movie-img-container">
+          <img class="movie-img" src="./poster.jpg" alt="">
+        </div>
+        <div class="movie-desc">
+          <div class="movie-desc-title">
+            <h2>THE HUMGER GAMES :</h2>
+            <h2>MONEY HEIST</h2>
+          </div>
+          <div class="movie-desc-description">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed in repellat fugiat non est
+              corporis beatae, odit blanditiis assumenda qui labore magni nobis aut hic, sapiente voluptas
+              architecto reprehenderit similique?
+            </p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia iure doloremque corrupti
+              sequi. Quo obcaecati quisquam dicta labore, reiciendis aliquam?
+            </p>
+          </div>
+        </div>
+        <div class="movie-about-actors">
+          <div class="about-more-actors">
+            <img class="about-more-image" src="./3748301.jpg" alt="">
+            <h5>some information about actor</h5>
+          </div>
+          <div class="about-more-actors">
+            <img class="about-more-image" src="./alvaro-morte_6.jpg" alt="">
+            <h5>some information about actor</h5>
+          </div>
+          <div class="about-more-actors">
+            <img class="about-more-image" src="./itziar_itun_o_la_casa_de_papel_200812_ghos8tymfm.jpg" alt="">
+            <h5>some information about actor</h5>
+          </div>
+          <div class="about-more-actors">
+            <img class="about-more-image"
+              src="./ursula-corbero-at-fiesta-multiopticas-photocall-in-madrid-09-12-2018-9.jpg" alt="">
+            <h5>some information about actor</h5>
+          </div>
+        </div>
+      </div>
+    </div>
 
+    <div class="section-actors-slide">
+      <div class="actors-slid">
+        <div class="actors-slid-container">
+          <div class="actor-sliders">
+            <img class="actors-images" src="./3748301.jpg" alt="actor-image">
+            <div class="actors-description">
+              <h4>actor name</h4>
+              <a href="#">actor link</a>
+            </div>
+          </div>
+          <div class="actor-sliders">
+            <img class="actors-images" src="./alvaro-morte_6.jpg" alt="actor-image">
+            <div class="actors-description">
+              <h4>actor name</h4>
+              <a href="#">actor link</a>
+            </div>
+          </div>
+          <div class="actor-sliders">
+            <img class="actors-images" src="./itziar_itun_o_la_casa_de_papel_200812_ghos8tymfm.jpg" alt="actor-image">
+            <div class="actors-description">
+              <h4>actor name</h4>
+              <a href="#">actor link</a>
+            </div>
+          </div>
+          <div class="actor-sliders">
+            <img class="actors-images"
+              src="./ursula-corbero-at-fiesta-multiopticas-photocall-in-madrid-09-12-2018-9.jpg" alt="actor-image">
+            <div class="actors-description">
+              <h4>actor name</h4>
+              <a href="#">actor link</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- glide.js library js -->
   <script src="./src/slider/js/glide.min.js"></script>
   <!-- glide.js config -->
