change images src in html

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="section-actors-container">
       <div class="about-actors">
         <div class="movie-img-container">
-          <img class="movie-img" src="./poster.jpg" alt="">
+          <img class="movie-img" src="./assets/images/about-movie-poster/poster.jpg" alt="">
         </div>
         <div class="movie-desc">
           <div class="movie-desc-title">
@@ -105,20 +105,20 @@
         </div>
         <div class="movie-about-actors">
           <div class="about-more-actors">
-            <img class="about-more-image" src="./3748301.jpg" alt="">
+            <img class="about-more-image" src="./assets/images/actors/3748301.jpg" alt="">
             <h5>some information about actor</h5>
           </div>
           <div class="about-more-actors">
-            <img class="about-more-image" src="./alvaro-morte_6.jpg" alt="">
+            <img class="about-more-image" src="./assets/images/actors/alvaro-morte_6.jpg" alt="">
             <h5>some information about actor</h5>
           </div>
           <div class="about-more-actors">
-            <img class="about-more-image" src="./itziar_itun_o_la_casa_de_papel_200812_ghos8tymfm.jpg" alt="">
+            <img class="about-more-image" src="./assets/images/actors/itziar_itun_o_la_casa_de_papel_200812_ghos8tymfm.jpg" alt="">
             <h5>some information about actor</h5>
           </div>
           <div class="about-more-actors">
             <img class="about-more-image"
-              src="./ursula-corbero-at-fiesta-multiopticas-photocall-in-madrid-09-12-2018-9.jpg" alt="">
+              src="./assets/images/actors/ursula-corbero-at-fiesta-multiopticas-photocall-in-madrid-09-12-2018-9.jpg" alt="">
             <h5>some information about actor</h5>
           </div>
         </div>
@@ -129,21 +129,21 @@
       <div class="actors-slid">
         <div class="actors-slid-container">
           <div class="actor-sliders">
-            <img class="actors-images" src="./3748301.jpg" alt="actor-image">
+            <img class="actors-images" src="./assets/images/actors/3748301.jpg" alt="actor-image">
             <div class="actors-description">
               <h4>actor name</h4>
               <a href="#">actor link</a>
             </div>
           </div>
           <div class="actor-sliders">
-            <img class="actors-images" src="./alvaro-morte_6.jpg" alt="actor-image">
+            <img class="actors-images" src="./assets/images/actors/alvaro-morte_6.jpg" alt="actor-image">
             <div class="actors-description">
               <h4>actor name</h4>
               <a href="#">actor link</a>
             </div>
           </div>
           <div class="actor-sliders">
-            <img class="actors-images" src="./itziar_itun_o_la_casa_de_papel_200812_ghos8tymfm.jpg" alt="actor-image">
+            <img class="actors-images" src="./assets/images/actors/itziar_itun_o_la_casa_de_papel_200812_ghos8tymfm.jpg" alt="actor-image">
             <div class="actors-description">
               <h4>actor name</h4>
               <a href="#">actor link</a>
@@ -151,7 +151,7 @@
           </div>
           <div class="actor-sliders">
             <img class="actors-images"
-              src="./ursula-corbero-at-fiesta-multiopticas-photocall-in-madrid-09-12-2018-9.jpg" alt="actor-image">
+              src="./assets/images/actors/ursula-corbero-at-fiesta-multiopticas-photocall-in-madrid-09-12-2018-9.jpg" alt="actor-image">
             <div class="actors-description">
               <h4>actor name</h4>
               <a href="#">actor link</a>
