--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </div>
           <div class="header-main-right">
             <img
-              src="./assets/images/poster.jpg"
+              src="./assets/images/poster-removebg.png"
               alt="poster"
               class="header-poster"
             />
