--- a/index.html
+++ b/index.html
@@ -113,155 +113,157 @@
         </section>
       </div>
     </header>
-    <!-- about actor => cena -->
-    <section class="section-actors">
-      <div class="container">
-        <div class="section-actors-container">
-          <div class="about-actors">
-            <div class="movie-img-container">
-              <img
-                class="movie-img"
-                src="./assets/images/about-movie-poster/poster.jpg"
-                alt=""
-              />
+    <main>
+      <!-- start shayan section -->
+      <section class="section-6">
+        <div class="sec6-container container">
+          <div class="sec6-box">
+            <div class="video-box">
+              <video src="assets/videos/Trailer.mp4" controls></video>
             </div>
-            <div class="movie-desc">
-              <div class="movie-desc-title">
-                <h2>THE HUMGER GAMES :</h2>
-                <h2>MONEY HEIST</h2>
+            <div class="sec6-content-box">
+              <div class="sec6-label-box">
+                <span class="sec6-label-1">content</span>
+                <span class="sec6-label-2">content</span>
+                <span class="sec6-label-3">content</span>
               </div>
-              <div class="movie-desc-description">
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed
-                  in repellat fugiat non est corporis beatae, odit blanditiis
-                  assumenda qui labore magni nobis aut hic, sapiente voluptas
-                  architecto reprehenderit similique?
-                </p>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Officia iure doloremque corrupti sequi. Quo obcaecati quisquam
-                  dicta labore, reiciendis aliquam?
-                </p>
-              </div>
-            </div>
-            <div class="movie-about-actors">
-              <div class="about-more-actors">
-                <img
-                  class="about-more-image"
-                  src="./assets/images/actors/3748301.jpg"
-                  alt=""
-                />
-                <h5>some information about actor</h5>
-              </div>
-              <div class="about-more-actors">
-                <img
-                  class="about-more-image"
-                  src="./assets/images/actors/alvaro-morte_6.jpg"
-                  alt=""
-                />
-                <h5>some information about actor</h5>
-              </div>
-              <div class="about-more-actors">
-                <img
-                  class="about-more-image"
-                  src="./assets/images/actors/itziar_itun_o_la_casa_de_papel_200812_ghos8tymfm.jpg"
-                  alt=""
-                />
-                <h5>some information about actor</h5>
-              </div>
-              <div class="about-more-actors">
-                <img
-                  class="about-more-image"
-                  src="./assets/images/actors/ursula-corbero-at-fiesta-multiopticas-photocall-in-madrid-09-12-2018-9.jpg"
-                  alt=""
-                />
-                <h5>some information about actor</h5>
+              <h1>Lorem ipsum</h1>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Impedit, optio? Enim laudantium vitae excepturi laboriosam error
+                ducimus id deleniti, quaerat necessitatibus soluta possimus.
+                Molestiae vero iste consequatur? Distinctio, tempore.
+              </p>
+              <div class="sec6-button-box">
+                <a class="sec6-button-1" href="#">content</a>
+                <a class="sec6-button-2" href="#">content</a>
               </div>
             </div>
           </div>
         </div>
+      </section>
+      <!-- end shayan section -->
+      <!-- about actor => cena -->
+      <section class="section-actors">
+        <div class="container">
+          <div class="section-actors-container">
+            <div class="about-actors">
+              <div class="movie-img-container">
+                <img
+                  class="movie-img"
+                  src="./assets/images/about-movie-poster/poster.jpg"
+                  alt=""
+                />
+              </div>
+              <div class="movie-desc">
+                <div class="movie-desc-title">
+                  <h2>THE HUMGER GAMES :</h2>
+                  <h2>MONEY HEIST</h2>
+                </div>
+                <div class="movie-desc-description">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed
+                    in repellat fugiat non est corporis beatae, odit blanditiis
+                    assumenda qui labore magni nobis aut hic, sapiente voluptas
+                    architecto reprehenderit similique?
+                  </p>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Officia iure doloremque corrupti sequi. Quo obcaecati
+                    quisquam dicta labore, reiciendis aliquam?
+                  </p>
+                </div>
+              </div>
+              <div class="movie-about-actors">
+                <div class="about-more-actors">
+                  <img
+                    class="about-more-image"
+                    src="./assets/images/actors/3748301.jpg"
+                    alt=""
+                  />
+                  <h5>some information about actor</h5>
+                </div>
+                <div class="about-more-actors">
+                  <img
+                    class="about-more-image"
+                    src="./assets/images/actors/alvaro-morte_6.jpg"
+                    alt=""
+                  />
+                  <h5>some information about actor</h5>
+                </div>
+                <div class="about-more-actors">
+                  <img
+                    class="about-more-image"
+                    src="./assets/images/actors/itziar_itun_o_la_casa_de_papel_200812_ghos8tymfm.jpg"
+                    alt=""
+                  />
+                  <h5>some information about actor</h5>
+                </div>
+                <div class="about-more-actors">
+                  <img
+                    class="about-more-image"
+                    src="./assets/images/actors/ursula-corbero-at-fiesta-multiopticas-photocall-in-madrid-09-12-2018-9.jpg"
+                    alt=""
+                  />
+                  <h5>some information about actor</h5>
+                </div>
+              </div>
+            </div>
+          </div>
 
-        <div class="section-actors-slide">
-          <div class="actors-slid">
-            <div class="actors-slid-container">
-              <div class="actor-sliders">
-                <img
-                  class="actors-images"
-                  src="./assets/images/actors/3748301.jpg"
-                  alt="actor-image"
-                />
-                <div class="actors-description">
-                  <h4>actor name</h4>
-                  <a href="#">actor link</a>
+          <div class="section-actors-slide">
+            <div class="actors-slid">
+              <div class="actors-slid-container">
+                <div class="actor-sliders">
+                  <img
+                    class="actors-images"
+                    src="./assets/images/actors/3748301.jpg"
+                    alt="actor-image"
+                  />
+                  <div class="actors-description">
+                    <h4>actor name</h4>
+                    <a href="#">actor link</a>
+                  </div>
                 </div>
-              </div>
-              <div class="actor-sliders">
-                <img
-                  class="actors-images"
-                  src="./assets/images/actors/alvaro-morte_6.jpg"
-                  alt="actor-image"
-                />
-                <div class="actors-description">
-                  <h4>actor name</h4>
-                  <a href="#">actor link</a>
+                <div class="actor-sliders">
+                  <img
+                    class="actors-images"
+                    src="./assets/images/actors/alvaro-morte_6.jpg"
+                    alt="actor-image"
+                  />
+                  <div class="actors-description">
+                    <h4>actor name</h4>
+                    <a href="#">actor link</a>
+                  </div>
                 </div>
-              </div>
-              <div class="actor-sliders">
-                <img
-                  class="actors-images"
-                  src="./assets/images/actors/itziar_itun_o_la_casa_de_papel_200812_ghos8tymfm.jpg"
-                  alt="actor-image"
-                />
-                <div class="actors-description">
-                  <h4>actor name</h4>
-                  <a href="#">actor link</a>
+                <div class="actor-sliders">
+                  <img
+                    class="actors-images"
+                    src="./assets/images/actors/itziar_itun_o_la_casa_de_papel_200812_ghos8tymfm.jpg"
+                    alt="actor-image"
+                  />
+                  <div class="actors-description">
+                    <h4>actor name</h4>
+                    <a href="#">actor link</a>
+                  </div>
                 </div>
-              </div>
-              <div class="actor-sliders">
-                <img
-                  class="actors-images"
-                  src="./assets/images/actors/ursula-corbero-at-fiesta-multiopticas-photocall-in-madrid-09-12-2018-9.jpg"
-                  alt="actor-image"
-                />
-                <div class="actors-description">
-                  <h4>actor name</h4>
-                  <a href="#">actor link</a>
+                <div class="actor-sliders">
+                  <img
+                    class="actors-images"
+                    src="./assets/images/actors/ursula-corbero-at-fiesta-multiopticas-photocall-in-madrid-09-12-2018-9.jpg"
+                    alt="actor-image"
+                  />
+                  <div class="actors-description">
+                    <h4>actor name</h4>
+                    <a href="#">actor link</a>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
-    <!-- start shayan section -->
-    <section class="section-6">
-      <div class="sec6-container container">
-        <div class="sec6-box">
-          <div class="video-box">
-            <video src="assets/videos/Trailer.mp4" controls></video>
-          </div>
-          <div class="sec6-content-box">
-            <div class="sec6-label-box">
-              <span class="sec6-label-1">content</span>
-              <span class="sec6-label-2">content</span>
-              <span class="sec6-label-3">content</span>
-            </div>
-            <h1>Lorem ipsum</h1>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit,
-              optio? Enim laudantium vitae excepturi laboriosam error ducimus id
-              deleniti, quaerat necessitatibus soluta possimus. Molestiae vero
-              iste consequatur? Distinctio, tempore.
-            </p>
-            <div class="sec6-button-box">
-              <a class="sec6-button-1" href="#">content</a>
-              <a class="sec6-button-2" href="#">content</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- end shayan section -->
+      </section>
+    </main>
 
     <!-- glide.js library js -->
     <script src="./src/slider/js/glide.min.js"></script>
