add hadis sections

--- a/index.html
+++ b/index.html
@@ -114,6 +114,85 @@
       </div>
     </header>
     <main>
+      <section class="home1">
+        <div class="container">
+          <div class="home-content-container">
+            <div class="video-container">
+              <video class="video" width="600" controls>
+                <source
+                  src="./images/f033ab16f698c039b71866fadb9c728948076200-720p.mp4"
+                  type="video/mp4"
+                />
+              </video>
+            </div>
+
+            <div class="title-content">
+              <div class="btn-container">
+                <a class="btn-top-1" href="#">Genre</a>
+                <a class="btn-top-2" href="#">Created by</a>
+                <a class="btn-top-3" href="#">Original language</a>
+              </div>
+              <div class="title-container">
+                <h1 class="title">The name of the series:Money Heist</h1>
+              </div>
+              <div class="title-desc">
+                <p class="desc">
+                  The Money Heist series is a crime and thriller series from
+                  Spain, and the original name of the series is Lacasa de Papel,
+                  which means house of paper. The heads of Netflix have said
+                  that the reason for changing the name of the Money Heist
+                  series in English is to avoid its resemblance to the House of
+                  Cards series. Money Heist was originally slated for a
+                  15-episode run on Antenna TV in 2017, before Netflix acquired
+                  the rights in 2019. With the huge investment of the Netflix
+                  network, the production of other seasons of this series
+                  continued and so far 4 seasons have been released. The complex
+                  and very strong script of the Money Heist series and the
+                  attractive performances of the actors have distinguished this
+                  series from many other series in this category.
+                </p>
+              </div>
+              <div class="btn-box">
+                <a href="#">More movies</a>
+                <a href="#">Button</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="home-page">
+        <div class="home-page-content">
+          <div>
+            <a class="btn-but-top-1" href="#"> Genre</a>
+            <a class="btn-but-top-2" href="#">Created by</a>
+            <a class="btn-but-top-3" href="#">Original language</a>
+          </div>
+          <h1>The name of the series:Money Heist</h1>
+          <p>
+            The story of the money theft series is about a group of professional
+            thieves with a personal management named Professor. The professor,
+            who is the mastermind of this group, designs a big robbery plan from
+            the National Mint of Spain. He has thought and worked for years to
+            plan this plan accurately and smartly, and now it is time to
+            implement his plan. Each of the thieves in this group has their own
+            reasons for cooperating with the professor's plan. In order not to
+            reveal their identity, the members of this group choose the name of
+            one of the different capitals of the world according to the
+            professor's order. Names like Moscow, Berlin, Tokyo, Nairobi,
+            Denver, Oslo, Rio and Helsinki. Their robbery plan succeeds with
+            many risks and dangers and just at the moment when they think they
+            have failed. During this operation, the professor and his team
+            manage to commit a historical robbery and rob the Spanish National
+            Mint.
+          </p>
+          <div class="btn-box1">
+            <a href="#">More movies</a>
+            <a href="#">Button</a>
+          </div>
+        </div>
+        <span class="home-imghover"></span>
+      </section>
       <!-- start shayan section -->
       <section class="section-6">
         <div class="sec6-container container">
