--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Money Heist</title>
+  <link type="image/png" sizes="96x96" rel="icon" href="./assets/images/fav-icon/icons8-money-heist-dali-48.png">
   <!-- glide.js library css -->
   <link rel="stylesheet" href="./src/slider/css/glide.core.min.css">
   <link rel="stylesheet" href="./src/slider/css/glide.theme.min.css">
