--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Money Heist</title>
-  <link type="image/png" sizes="96x96" rel="icon" href="./assets/images/fav-icon/icons8-money-heist-dali-48.png">
-  <!-- glide.js library css -->
-  <link rel="stylesheet" href="./src/slider/css/glide.core.min.css">
-  <link rel="stylesheet" href="./src/slider/css/glide.theme.min.css">
-  <!-- custom css -->
-  <link rel="stylesheet" href="./src/styles/style.css" />
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Money Heist</title>
+    <link
+      type="image/png"
+      sizes="96x96"
+      rel="icon"
+      href="./assets/images/fav-icon/icons8-money-heist-dali-48.png"
+    />
+    <!-- glide.js library css -->
+    <link rel="stylesheet" href="./src/slider/css/glide.core.min.css" />
+    <link rel="stylesheet" href="./src/slider/css/glide.theme.min.css" />
+    <!-- custom css -->
+    <link rel="stylesheet" href="./src/styles/style.css" />
+  </head>
 
   <body>
     <header class="header">
@@ -121,18 +125,15 @@
           <div class="home-content-container">
             <div class="video-container">
               <video class="video" width="600" controls>
-                <source
-                  src="./images/f033ab16f698c039b71866fadb9c728948076200-720p.mp4"
-                  type="video/mp4"
-                />
+                <source src="./assets/videos/Trailer.mp4" type="video/mp4" />
               </video>
             </div>
 
             <div class="title-content">
               <div class="btn-container">
-                <a class="btn-top-1" href="#">Genre</a>
-                <a class="btn-top-2" href="#">Created by</a>
-                <a class="btn-top-3" href="#">Original language</a>
+                <span class="info-box info-box1">Genre</span>
+                <span class="info-box info-box2">Created by</span>
+                <span class="info-box info-box3">Original language</span>
               </div>
               <div class="title-container">
                 <h1 class="title">The name of the series:Money Heist</h1>
@@ -146,12 +147,7 @@
                   series in English is to avoid its resemblance to the House of
                   Cards series. Money Heist was originally slated for a
                   15-episode run on Antenna TV in 2017, before Netflix acquired
-                  the rights in 2019. With the huge investment of the Netflix
-                  network, the production of other seasons of this series
-                  continued and so far 4 seasons have been released. The complex
-                  and very strong script of the Money Heist series and the
-                  attractive performances of the actors have distinguished this
-                  series from many other series in this category.
+                  the rights in 2019.
                 </p>
               </div>
               <div class="btn-box">
@@ -163,14 +159,14 @@
         </div>
       </section>
 
-      <section class="home-page">
-        <div class="home-page-content">
+      <section class="home-section">
+        <div class="home-section-content">
           <div>
-            <a class="btn-but-top-1" href="#"> Genre</a>
-            <a class="btn-but-top-2" href="#">Created by</a>
-            <a class="btn-but-top-3" href="#">Original language</a>
+            <span class="info-box info-box1"> Genre</span>
+            <span class="info-box info-box2">Created by</span>
+            <span class="info-box info-box3">Original language</span>
           </div>
-          <h1>The name of the series:Money Heist</h1>
+          <h2>The name of the series:Money Heist</h2>
           <p>
             The story of the money theft series is about a group of professional
             thieves with a personal management named Professor. The professor,
@@ -182,18 +178,14 @@
             reveal their identity, the members of this group choose the name of
             one of the different capitals of the world according to the
             professor's order. Names like Moscow, Berlin, Tokyo, Nairobi,
-            Denver, Oslo, Rio and Helsinki. Their robbery plan succeeds with
-            many risks and dangers and just at the moment when they think they
-            have failed. During this operation, the professor and his team
-            manage to commit a historical robbery and rob the Spanish National
-            Mint.
+            Denver, Oslo, Rio and Helsinki.
           </p>
-          <div class="btn-box1">
+
+          <div class="btn-box">
             <a href="#">More movies</a>
             <a href="#">Button</a>
           </div>
         </div>
-        <span class="home-imghover"></span>
       </section>
       <!-- start shayan section -->
       <section class="section-6">
