--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </div>
           <div class="header-main-right">
             <img
-              src="./assets/images/poster-removebg.png"
+              src="./assets/images/poster.png"
               alt="poster"
               class="header-poster"
             />
