--- a/src/pages/actor1-page/actor1.html
+++ b/src/pages/actor1-page/actor1.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link type="image/png" sizes="96x96" rel="icon" href="../../../assets/images/fav-icon/icons8-money-heist-dali-48.png" />
+    <title>Alvaro morte</title>
     <link rel="stylesheet" href="./actor1.css">
 </head>
+
 <body>
-    
+
 </body>
+
 </html>
