change some style

--- a/src/pages/actor1-page/actor1.html
+++ b/src/pages/actor1-page/actor1.html
@@ -22,16 +22,16 @@
                     modi harum beatae corporis.</p>
             </div>
             <div class="winning-awards-achievement">
-                <div class="achievement-1">
+                <div class="achievement">
                     <img src="../../../assets/png/actors-page-png/award-actung-black.png" alt="">
                 </div>
-                <div class="achievement-2">
+                <div class="achievement">
                     <img src="../../../assets/png/actors-page-png/award-jeevika-black.png" alt="">
                 </div>
-                <div class="achievement-3">
+                <div class="achievement">
                     <img src="../../../assets/png/actors-page-png/award-official-black.png" alt="">
                 </div>
-                <div class="achievement-4">
+                <div class="achievement">
                     <img src="../../../assets/png/actors-page-png/award-sedona-black.png" alt="">
                 </div>
             </div>
