start make footer

--- a/index.html
+++ b/index.html
@@ -337,6 +337,36 @@
         </div>
       </section>
     </main>
+    <footer class="footer">
+      <section class="footer-container container">
+        <div class="footer-box">
+          <div class="footer-box-1">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate
+            nisi hic iusto nihil. Aut incidunt, repellendus minus id commodi
+            pariatur aspernatur qui sint rerum. Expedita esse doloribus
+            repudiandae at porro.
+          </div>
+          <div class="footer-box-2">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate
+            nisi hic iusto nihil. Aut incidunt, repellendus minus id commodi
+            pariatur aspernatur qui sint rerum. Expedita esse doloribus
+            repudiandae at porro.
+          </div>
+          <div class="footer-box-3">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate
+            nisi hic iusto nihil. Aut incidunt, repellendus minus id commodi
+            pariatur aspernatur qui sint rerum. Expedita esse doloribus
+            repudiandae at porro.
+          </div>
+          <div class="footer-box-4">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate
+            nisi hic iusto nihil. Aut incidunt, repellendus minus id commodi
+            pariatur aspernatur qui sint rerum. Expedita esse doloribus
+            repudiandae at porro.
+          </div>
+        </div>
+      </section>
+    </footer>
 
     <!-- glide.js library js -->
     <script src="./src/slider/js/glide.min.js"></script>
