codding bg and logo in alvaro page

--- a/src/pages/actor1-page/actor1.html
+++ b/src/pages/actor1-page/actor1.html
@@ -1,42 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type="image/png" sizes="96x96" rel="icon"
-        href="../../../assets/images/fav-icon/icons8-money-heist-dali-48.png" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      type="image/png"
+      sizes="96x96"
+      rel="icon"
+      href="../../../assets/images/fav-icon/icons8-money-heist-dali-48.png"
+    />
     <title>Alvaro morte</title>
-    <link rel="stylesheet" href="./actor1.css">
-</head>
-
-<body>
-    <section class="winning-awards-section">
+    <link rel="stylesheet" href="./actor1.css" />
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <nav class="nav-top">
+          <img
+            src="../../../assets/images/logo/Logonetflix.png"
+            alt="Logo Netflix"
+            class="logo"
+          />
+        </nav>
+      </div>
+    </header>
+    <main>
+      <section class="winning-awards-section">
         <div class="winning-awards-container container">
-            <div class="winning-awards-title">
-                <h2>Winning awards</h2>
+          <div class="winning-awards-title">
+            <h2>Winning awards</h2>
+          </div>
+          <div class="winning-awards-desc">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
+              placeat molestias odio, enim accusantium quisquam maiores nostrum
+              corporis dolor? Quo qui velit vero perferendis nostrum quas modi
+              harum beatae corporis.
+            </p>
+          </div>
+          <div class="winning-awards-achievement">
+            <div class="achievement">
+              <img
+                src="../../../assets/png/actors-page-png/award-actung-black.png"
+                alt=""
+              />
             </div>
-            <div class="winning-awards-desc">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis placeat molestias odio, enim
-                    accusantium quisquam maiores nostrum corporis dolor? Quo qui velit vero perferendis nostrum quas
-                    modi harum beatae corporis.</p>
+            <div class="achievement">
+              <img
+                src="../../../assets/png/actors-page-png/award-jeevika-black.png"
+                alt=""
+              />
             </div>
-            <div class="winning-awards-achievement">
-                <div class="achievement">
-                    <img src="../../../assets/png/actors-page-png/award-actung-black.png" alt="">
-                </div>
-                <div class="achievement">
-                    <img src="../../../assets/png/actors-page-png/award-jeevika-black.png" alt="">
-                </div>
-                <div class="achievement">
-                    <img src="../../../assets/png/actors-page-png/award-official-black.png" alt="">
-                </div>
-                <div class="achievement">
-                    <img src="../../../assets/png/actors-page-png/award-sedona-black.png" alt="">
-                </div>
+            <div class="achievement">
+              <img
+                src="../../../assets/png/actors-page-png/award-official-black.png"
+                alt=""
+              />
             </div>
+            <div class="achievement">
+              <img
+                src="../../../assets/png/actors-page-png/award-sedona-black.png"
+                alt=""
+              />
+            </div>
+          </div>
         </div>
-    </section>
-</body>
-
+      </section>
+    </main>
+  </body>
 </html>
