add base of icons

--- a/src/pages/actor1-page/actor1.html
+++ b/src/pages/actor1-page/actor1.html
@@ -16,11 +16,20 @@
     <header>
       <div class="container">
         <nav class="nav-top">
-          <img
-            src="../../../assets/images/logo/Logonetflix.png"
-            alt="Logo Netflix"
-            class="logo"
-          />
+          <div class="nav-top-left">
+            <img
+              src="../../../assets/images/logo/Logonetflix.png"
+              alt="Logo Netflix"
+              class="logo"
+            />
+          </div>
+          <div class="nav-top-right">
+            <div class="nav-icon"></div>
+            <div class="nav-icon"></div>
+            <div class="nav-icon"></div>
+            <div class="nav-icon"></div>
+            <a href="#" class="nav-btn">Contact</a>
+          </div>
         </nav>
       </div>
     </header>
