--- a/src/pages/actor1-page/actor1.html
+++ b/src/pages/actor1-page/actor1.html
@@ -11,6 +11,13 @@
     />
     <title>Alvaro morte</title>
     <link rel="stylesheet" href="./actor1.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <header>
@@ -24,10 +31,10 @@
             />
           </div>
           <div class="nav-top-right">
-            <div class="nav-icon"></div>
-            <div class="nav-icon"></div>
-            <div class="nav-icon"></div>
-            <div class="nav-icon"></div>
+            <div class="nav-icon"><i class="fa-brands fa-facebook-f"></i></div>
+            <div class="nav-icon"><i class="fa-brands fa-instagram"></i></div>
+            <div class="nav-icon"><i class="fa-brands fa-twitter"></i></div>
+            <div class="nav-icon"><i class="fa-brands fa-youtube"></i></div>
             <a href="#" class="nav-btn">Contact</a>
           </div>
         </nav>
