--- a/src/pages/actor1-page/actor1.html
+++ b/src/pages/actor1-page/actor1.html
@@ -35,9 +35,17 @@
             <div class="nav-icon"><i class="fa-brands fa-instagram"></i></div>
             <div class="nav-icon"><i class="fa-brands fa-twitter"></i></div>
             <div class="nav-icon"><i class="fa-brands fa-youtube"></i></div>
-            <a href="#" class="nav-btn">Contact</a>
+            <a href="#" class="btn nav-btn">Contact</a>
           </div>
         </nav>
+        <div class="nav-bottom">
+          <ul class="menu">
+            <li class="menu-item item-vip"><a href="#">Home</a></li>
+            <li class="menu-item"><a href="#">Summery</a></li>
+            <li class="menu-item"><a href="#">Achivment</a></li>
+            <li class="menu-item"><a href="#">Gallery</a></li>
+          </ul>
+        </div>
       </div>
     </header>
     <main>
