--- a/src/pages/actor1-page/actor1.html
+++ b/src/pages/actor1-page/actor1.html
@@ -46,6 +46,17 @@
             <li class="menu-item"><a href="#">Gallery</a></li>
           </ul>
         </div>
+        <div class="header-main">
+          <p class="header-main-subTitle">Actor</p>
+          <h1 class="header-main-title">Alvaro <span> Morte</span></h1>
+          <p class="header-main-description">
+            Álvaro Antonio García Pérez (born 23 February 1975), He gained
+            worldwide recognition for playing the role of 'The Professor' in the
+            television series Money Heist.Morte plays Logain Ablar, in the
+            Amazon Prime Video's high fantasy series, The Wheel of Time (2021
+            present)known professionally as Álvaro Morte, is a Spanish actor.
+          </p>
+        </div>
       </div>
     </header>
     <main>
