--- a/src/pages/actor1-page/actor1.html
+++ b/src/pages/actor1-page/actor1.html
@@ -57,6 +57,20 @@
             present)known professionally as Álvaro Morte, is a Spanish actor.
           </p>
         </div>
+        <div class="header-bottom">
+          <img
+            src="../../../assets/png/actors-page-png/award-actung-black.png"
+            alt="achivment"
+          />
+          <img
+            src="../../../assets/png/actors-page-png/award-jeevika-black.png"
+            alt="Achivment"
+          />
+          <img
+            src="../../../assets/png/actors-page-png/award-official-black.png"
+            alt="Achivment"
+          />
+        </div>
       </div>
     </header>
     <main>
