--- a/src/pages/actor1-page/actor1.html
+++ b/src/pages/actor1-page/actor1.html
@@ -81,10 +81,19 @@
           </div>
           <div class="winning-awards-desc">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
-              placeat molestias odio, enim accusantium quisquam maiores nostrum
-              corporis dolor? Quo qui velit vero perferendis nostrum quas modi
-              harum beatae corporis.
+              Morte began his acting career when he played a minor role in the
+              Spanish television series Hospital Central. He landed his first
+              main role in a TV series in Planta 25,aired on a number of Spanish
+              regional TV broadcasters and in which he played Ray—a driver—from
+              2007 to 2008 He then played Adolfo Castillo in the Spanish
+              television series Bandolera, Gabriel Areta in the soap opera Amar
+              en tiempos revueltos.Morte starred in the 2019 Movistar+
+              television series El embarcadero, playing Óscar, a man who has
+              lived a double life by living with two different women
+              separately.In December 2019, Morte was announced to have joined
+              the cast of the Amazon television series The Wheel of Time, an
+              adaption of the epic fantasy novels of the same name, set to
+              portray Logain.
             </p>
           </div>
           <div class="winning-awards-achievement">
