--- a/src/pages/actor1-page/alvaro-morte.html
+++ b/src/pages/actor1-page/alvaro-morte.html
@@ -10,7 +10,7 @@
       href="../../../assets/images/fav-icon/icons8-money-heist-dali-48.png"
     />
     <title>Alvaro morte</title>
-    <link rel="stylesheet" href="./actor1.css" />
+    <link rel="stylesheet" href="./alvaro-morte.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
