--- a/index.html
+++ b/index.html
@@ -341,28 +341,54 @@
       <section class="footer-container container">
         <div class="footer-box">
           <div class="footer-box-1">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate
-            nisi hic iusto nihil. Aut incidunt, repellendus minus id commodi
-            pariatur aspernatur qui sint rerum. Expedita esse doloribus
-            repudiandae at porro.
+            <h1>Get Update</h1>
+            <h4>
+              write your email here to join our community and get update about
+              new season and spin off
+            </h4>
+            <form action="#">
+              <label for="email">
+                email
+                <input type="email" id="email" name="email" />
+              </label>
+            </form>
           </div>
           <div class="footer-box-2">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate
-            nisi hic iusto nihil. Aut incidunt, repellendus minus id commodi
-            pariatur aspernatur qui sint rerum. Expedita esse doloribus
-            repudiandae at porro.
+            <h1>Actors page:</h1>
+            <nav class="footer-menu">
+              <ul class="footer-menu-items">
+                <li class="footer-menu-item"><a href="#">Lorem</a></li>
+                <li class="footer-menu-item"><a href="#">Lorem</a></li>
+                <li class="footer-menu-item"><a href="#">Lorem</a></li>
+                <li class="footer-menu-item"><a href="#">Lorem</a></li>
+                <li class="footer-menu-item"><a href="#">Lorem</a></li>
+              </ul>
+            </nav>
           </div>
           <div class="footer-box-3">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate
-            nisi hic iusto nihil. Aut incidunt, repellendus minus id commodi
-            pariatur aspernatur qui sint rerum. Expedita esse doloribus
-            repudiandae at porro.
+            <h1>La casa de papel cast statement:</h1>
+            <p>
+              After the frantic rendezvous, Ávalos boarded a plane to Los
+              Angeles and popped the drive into his laptop. When his feet hit
+              the ground in California, he knew his next Spanish acquisition had
+              to be “Money Heist.”
+            </p>
           </div>
           <div class="footer-box-4">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate
-            nisi hic iusto nihil. Aut incidunt, repellendus minus id commodi
-            pariatur aspernatur qui sint rerum. Expedita esse doloribus
-            repudiandae at porro.
+            <div class="icon-box">
+              <a class="footer-icon" href="#">
+                <img src="assets/images/fav-icon/instagram-icon.png" alt="" />
+              </a>
+              <a class="footer-icon" href="#">
+                <img src="assets/images/fav-icon/telegram-icon.png" alt="" />
+              </a>
+              <a class="footer-icon" href="#">
+                <img src="assets/images/fav-icon/whatsapp-icon.png" alt="" />
+              </a>
+              <a class="footer-icon" href="#">
+                <img src="assets/images/fav-icon/x-icon.png" alt="" />
+              </a>
+            </div>
           </div>
         </div>
       </section>
