--- a/src/pages/alvaro morte/alvaro-morte.html
+++ b/src/pages/alvaro morte/alvaro-morte.html
@@ -10,7 +10,7 @@
       href="../../../assets/images/fav-icon/icons8-money-heist-dali-48.png"
     />
     <title>Alvaro morte</title>
-    <link rel="stylesheet" href="./alvaro-morte.css" />
+    <link rel="stylesheet" href="../actors-style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -20,7 +20,7 @@
     />
   </head>
   <body>
-    <header>
+    <header class="alvaro-header">
       <div class="container">
         <nav class="nav-top">
           <div class="nav-top-left">
