add footer to all files & link in main page

--- a/index.html
+++ b/index.html
@@ -298,7 +298,9 @@
                     alt="actor-image"
                   />
                   <div class="actors-description">
-                    <a href="#">Pedro Alonso</a>
+                    <a href="./src/pages/pedro alonso/pedro-alonso.html"
+                      >Pedro Alonso</a
+                    >
                   </div>
                 </div>
                 <div class="actor-sliders">
@@ -320,7 +322,9 @@
                     alt="actor-image"
                   />
                   <div class="actors-description">
-                    <a href="#">Itziar Ituño</a>
+                    <a href="./src/pages/itzair ituno/itzair-ituno.html"
+                      >Itziar Ituño</a
+                    >
                   </div>
                 </div>
                 <div class="actor-sliders">
@@ -330,7 +334,9 @@
                     alt="actor-image"
                   />
                   <div class="actors-description">
-                    <a href="#">Úrsula Corberó</a>
+                    <a href="./src/pages/ursula corbero/ursula-corbero.html"
+                      >Úrsula Corberó</a
+                    >
                   </div>
                 </div>
               </div>
@@ -379,16 +385,25 @@
           <div class="footer-box-4">
             <div class="icon-box">
               <a class="footer-icon" href="#">
-                <img src="assets/images/fav-icon/instagram-icon.png" alt="" />
+                <img
+                  src="assets/images/fav-icon/instagram-icon.png"
+                  alt="insta"
+                />
               </a>
               <a class="footer-icon" href="#">
-                <img src="assets/images/fav-icon/telegram-icon.png" alt="" />
+                <img
+                  src="assets/images/fav-icon/telegram-icon.png"
+                  alt="telegram"
+                />
               </a>
               <a class="footer-icon" href="#">
-                <img src="assets/images/fav-icon/whatsapp-icon.png" alt="" />
+                <img
+                  src="assets/images/fav-icon/whatsapp-icon.png"
+                  alt="whatsapp"
+                />
               </a>
               <a class="footer-icon" href="#">
-                <img src="assets/images/fav-icon/x-icon.png" alt="" />
+                <img src="assets/images/fav-icon/x-icon.png" alt="x" />
               </a>
             </div>
           </div>
