--- a/src/pages/alvaro morte/alvaro-morte.html
+++ b/src/pages/alvaro morte/alvaro-morte.html
@@ -100,30 +100,95 @@
             <div class="achievement">
               <img
                 src="../../../assets/png/actors-page-png/award-actung-black.png"
-                alt=""
+                alt="achivment"
               />
             </div>
             <div class="achievement">
               <img
                 src="../../../assets/png/actors-page-png/award-jeevika-black.png"
-                alt=""
+                alt="achivment"
               />
             </div>
             <div class="achievement">
               <img
                 src="../../../assets/png/actors-page-png/award-official-black.png"
-                alt=""
+                alt="achivment"
               />
             </div>
             <div class="achievement">
               <img
                 src="../../../assets/png/actors-page-png/award-sedona-black.png"
-                alt=""
+                alt="achivment"
               />
             </div>
           </div>
         </div>
       </section>
     </main>
+    <footer class="footer">
+      <section class="footer-container container">
+        <div class="footer-box">
+          <div class="footer-box-1">
+            <h1>Get Update</h1>
+            <h4>
+              write your email here to join our community and get update about
+              new season and spin off
+            </h4>
+            <form action="#">
+              <label for="email">
+                email
+                <input type="email" id="email" name="email" />
+              </label>
+            </form>
+          </div>
+          <div class="footer-box-2">
+            <h1>Actors page:</h1>
+            <nav class="footer-menu">
+              <ul class="footer-menu-items">
+                <li class="footer-menu-item"><a href="#">Lorem</a></li>
+                <li class="footer-menu-item"><a href="#">Lorem</a></li>
+                <li class="footer-menu-item"><a href="#">Lorem</a></li>
+                <li class="footer-menu-item"><a href="#">Lorem</a></li>
+                <li class="footer-menu-item"><a href="#">Lorem</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="footer-box-3">
+            <h1>La casa de papel cast statement:</h1>
+            <p>
+              After the frantic rendezvous, Ávalos boarded a plane to Los
+              Angeles and popped the drive into his laptop. When his feet hit
+              the ground in California, he knew his next Spanish acquisition had
+              to be “Money Heist.”
+            </p>
+          </div>
+          <div class="footer-box-4">
+            <div class="icon-box">
+              <a class="footer-icon" href="#">
+                <img
+                  src="../../../assets/images/fav-icon/instagram-icon.png"
+                  alt="insta"
+                />
+              </a>
+              <a class="footer-icon" href="#">
+                <img
+                  src="../../../assets/images/fav-icon/telegram-icon.png"
+                  alt="telgram"
+                />
+              </a>
+              <a class="footer-icon" href="#">
+                <img
+                  src="../../../assets/images/fav-icon/whatsapp-icon.png"
+                  alt="whatsapp"
+                />
+              </a>
+              <a class="footer-icon" href="#">
+                <img src="../../../assets/images/fav-icon/x-icon.png" alt="x" />
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
