change src tag a

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                     alt="actor-image"
                   />
                   <div class="actors-description">
-                    <a href="./src/pages/actor1-page/alvaro-morte.html"
+                    <a href="./src/pages/alvaro morte/alvaro-morte.html"
                       >Álvaro Morte</a
                     >
                   </div>
